tests/NormalTests/paczka2/big_fuzzy/18390300.err
Error in line 2: YuBJPO A550 50,7
Error in line 3: DOrM S576 25,0
Error in line 6: HxukIkupVS S498 92,0
Error in line 8: HxukIkupVS A550 94,1
Error in line 12: YuBJPO S498 84,2
Error in line 17: YuBJPO S701 96,7
Error in line 23: DOrM S498 85,2
Error in line 18: 4UyXKWFSAev S701 5,9
Error in line 34: YuBJPO A550 11,4
Error in line 42: YuBJPO S701 54,9
Error in line 46: XJ45bpW5 S701 24,9
Error in line 60: XJ45bpW5 S576 233,0
Error in line 65: XJ45bpW5 A550 98,6
Error in line 50: DOrM A550 324,7
Error in line 70: DOrM S498 93,3
Error in line 71: DOrM S701 89,2
Error in line 87: XJ45bpW5 A550 15,9
Error in line 80: YuBJPO S701 53,8
Error in line 79: DOrM S498 197,0
Error in line 91: A550 S498 68,3
Error in line 98: YS1tS S701 37,4
Error in line 96: A550 S701 15,0
Error in line 101: A550 S498 87,0
Error in line 106: A550 A550 93,6
Error in line 110: DOrM S701 83,5
Error in line 111: YuBJPO A550 221,0
Error in line 118: XJ45bpW5 A550 74,28
Error in line 123: YS1tS S701 56,4
Error in line 128: A550 S576 12,38
Error in line 124: YS1tS A550 71,5
Error in line 131: YuBJPO S576 25,1
Error in line 132: A550 S576 5,1
Error in line 139: YuBJûO A550 114,7
Error in line 135: YuBJPO A550 62,0
Error in line 120: XJ45bpW5 A550 15,7
Error in line 129: YS1tS S576 49,1
Error in line 142: XJ45bpW5 S701 50,6
Error in line 145: XJ45bpW5 S498 79,3
Error in line 158: DOrM S576 66,1
Error in line 174: DOrM S701 186,5
Error in line 192: A550 S701 42,3
Error in line 197: A550 A550 92,7
Error in line 204: XJ45bpW5 S576 -2,1
Error in line 186: HxukIkupVS A550 48,0
Error in line 210: 4UyXKWFSAev A550 47,2
Error in line 213: YS1tS S576 12,7
Error in line 218: DOrM S498 49,39
Error in line 234: XJ45bpW5 S57X 4,9
Error in line 202: XJ45bpW5 S576 93,0
Error in line 231: YuBJPO A550 50,6
Error in line 225: A550 S498 79,3
Error in line 240: A550 S576 55,7
Error in line 244: 4UyXKWFSAev A550 55,1
Error in line 214: DOrM A550 86,6
